# intel_img_classification

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  intel_img_classification.ipynb  pyproject.toml  requirements.txt
cnn_fine_tuned/: oracle.json
cnn_fine_tuned/trial_0/: trial.json
docs/: some_explanation.ipynb
models/: cnn_model.h5  cnn_results.json  fine_tuned_cnn.h5  mobilenet_model.h5  resnet50_model.h5  vgg16_model.h5
src/: cnn_model.py  config.py  data_process.py  mobilenet_model.py  model.py  resnet50_model.py  test.py  train.py  tune.py  utils.py  vgg16_model.py
