[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "intel_img_classification"
version = "0.0.1"
description = "Multiclass Image Classificaiton on Intel Scenary Dataset"
authors = [
  { name = "Mason" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["intel_img_classification"]
force_sort_within_sections = true
